feat: init cats module
